Class.newInstance() -> Class.getDeclaredConstructor().newInstance()
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/ball-util/trunk@6139 b3e4a033-f9ea-474d-ac63-5dcbede9114a